# Dashboard-Tring-

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md
cloudbuild/: build-push.yaml  deploy-dev.yaml  deploy-prod.yaml
docs/: adding-endpoints.md  contributing.md  data-catalog-appsflyer.md  data-catalog-appstore.md  data-catalog-moengage.md  data-catalog-play-console.md  gcp-setup.md  handover.md  index.md  runbook.md  testing.md
infra/envs/dev/: main.tf  terraform.tfvars.example
infra/envs/prod/: main.tf  terraform.tfvars.example
infra/modules/artifact_registry/: main.tf
infra/modules/bigquery/: main.tf
infra/modules/cloud_run_jobs/: main.tf
infra/modules/cloudbuild/: main.tf
infra/modules/iam/: main.tf
ingestion/: .dockerignore  Dockerfile  pyproject.toml
ingestion/src/tring_ingest/: cli.py
ingestion/src/tring_ingest/common/: auth.py  bq_loader.py  config.py  http.py  logging.py
ingestion/src/tring_ingest/sources/app_store/: endpoints.py  extract.py
ingestion/src/tring_ingest/sources/appsflyer/: client.py  endpoints.py  extract.py
ingestion/src/tring_ingest/sources/moengage/: client.py  endpoints.py  extract.py
ingestion/src/tring_ingest/sources/play_console/: client.py  endpoints.py  extract.py  gcs_stats.py
ingestion/tests/: test_appsflyer_extract.py  test_bq_loader.py  test_moengage_extract.py  test_play_console_extract.py
orchestration/workflows/: moengage_backfill.yaml  pipeline.yaml
transform/: .dockerignore  Dockerfile  dbt_project.yml  profiles.yml
transform/macros/: generate_schema_name.sql
(+49 files in other folders)
