[project]
name = "tring-ingest"
version = "0.1.0"
description = "Dashboard Monitoring & AI Insight — data pipeline ingestion layer"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "google-cloud-bigquery>=3.20",
    "google-cloud-secret-manager>=2.20",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tring_ingest"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
